--- a/start1/postit.html
+++ b/start1/postit.html
@@ -12,6 +12,41 @@
 </head>
 
 <body>
-
+<div id="container">
+    <div id="grid">
+        <div id="task1" class="postit">
+            <h3>Task #1</h3>
+            <p>Creare i postit</p>
+        </div>
+        <div id="task2" class="postit">
+            <h3>Task #2</h3>
+            <p>Colorarli</p>
+        </div>
+        <div id="task3" class="postit">
+            <h3>Task #3</h3>
+            <p>Affiancarli</p>
+        </div>
+        <div id="task4" class="postit">
+            <h3>Task #4</h3>
+            <p>Spaziarli</p>
+        </div>
+        <div id="task5" class="postit">
+            <h3>Task #5</h3>
+            <p>Ombreggiarli</p>
+        </div>
+        <div id="task6" class="postit">
+            <h3>Task #6</h3>
+            <p>Ruotarli</p>
+        </div>
+        <div id="task7" class="postit">
+            <h3>Task #7</h3>
+            <p>Animarli</p>
+        </div>
+        <div id="task8" class="postit">
+            <h3>Task #8</h3>
+            <p>Testarli</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
